[package]
name = "dicom_reorganizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
pyo3 = { version = "0.15", features = ["extension-module"] }
rayon = "1.5"
anyhow = "1.0"

[lib]
name = "dicom_reorganizer"
crate-type = ["cdylib"]